src/styles/components/section.scss
.section {
  margin: $hr-block-padding auto;
  @include flex();
  @include flex-grid-row();
  justify-content: center;

  &_full-width {
    width: 100%;
    padding: 0;
    max-width: 100%;
    background: $hr-green;
  }

  &_padding {
    padding-left: 6.938rem;
    padding-right: 6.938rem;
    @include breakpoint(medium down) {
      padding-left: 0;
      padding-right: 0;
    }
  }

  &_vw {
    max-width: 100vw;
    left: 50%;
    margin-left: -50vw;
    position: relative;
    width: 100vw;
  }

  &__in {
    background: $white;
    @include flex-grid-column(12);
    height: auto;
    position: relative;
    padding-top: $hr-block-padding;
    padding-bottom: $hr-block-padding;
    text-align: center;
  }

  &__in_padding {
    padding-right: $hr-row-padding;
    padding-left: $hr-row-padding;
    @include breakpoint(medium down) {
      padding-left: 0;
      padding-right: 0;
      @include flex-grid-column(12);
    }
  }

  &__in_reverse {
    &:before {
      right: 100%;
      left: inherit;
    }
  }

  &__in_left {
    &:before {
      right: 100%;
      left: inherit;
      width: 9999px;
      top: 0;
      bottom: 0;
      content: '';
      background: #fefefe;
      position: absolute;
    }
  }

  &__in_full-width {
    @include flex-grid-row();

    &:before,
    &:after {
      background: none;
      left: 0;
      right: 0;
    }
  }

  &__in_green {
    background: $hr-green;
    padding-left: 0;
    padding-right: 0;

    &:before {
      background: $hr-green;
    }

    @include breakpoint(medium down) {
      @include flex-grid-column(12);
    }
  }

  &__in_sidebar {
    padding-left: 0;
    padding-right: 0;
    text-align: left;
    background: #fbfbfb;
    padding-top: 0;
    padding-bottom: 0;

    @include flex-grid-row();

    &:before {
      background: #fbfbfb;
    }

    .section__sidebar {
      padding-top: $hr-block-padding;
      padding-bottom: $hr-block-padding;
      background: #fbfbfb;
    }

    .section__content {
      padding-top: $hr-block-padding;
      padding-bottom: $hr-block-padding;
      background: #ffffff;
    }
  }

  &__in_gray {
    background: #f5f5f5;

    &:before {
      background: #f5f5f5;
    }
  }

  &__in_blog {
    width: 100%;

    &:before {
      z-index: 1;
    }

    .section__sidebar {
      z-index: 1;
    }
  }

  &__in_developers {
    background: transparent;
    padding-top: 0;
    padding-bottom: 0;
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    padding-left: 0;
    padding-right: 0;
    text-align: left;

    &:before {
      background: #fbfbfb;
    }

    .section__sidebar {
      padding-top: $hr-block-padding;
      padding-bottom: $hr-block-padding;
      background: #fbfbfb;
    }

    .section__content {
      padding-top: $hr-block-padding;
      padding-bottom: $hr-block-padding;
      background: #ffffff;

      @include breakpoint(medium down) {
        padding-left: 1rem;
        padding-right: 1rem;
      }
    }

    .section__sidebar_right {
      padding-top: 0;
      background: transparent;

      @include breakpoint(medium down) {
        padding: 0;
      }
    }
  }

  &__sidebar {
    @include flex-grid-column(3);
    position: sticky;
    top: 1rem;

    @include breakpoint(medium down) {
      @include flex-grid-column(12);
      order: 0;
      position: unset;
    }
  }

  &__sidebar-in {
    background: $white;

    @include breakpoint(medium down) {
      border-top: 1px solid $hr-green;
      border-bottom: 1px solid $hr-green;
    }
  }

  &__sidebar_sticky {
    position: sticky;
    top: 1rem;
    max-height: calc(100vh - 2rem);
    overflow-y: auto;

    @include breakpoint(medium down) {
      position: unset;
      max-height: unset;
    }
  }

  &__sidebar_fixed {
    position: fixed;
    width: 100%;
    top: -1px;
    box-shadow: 0px 3px 4px 2px rgba(109, 178, 79, 0.2);
  }

  &__sidebar_logo {
    margin-bottom: 1rem;
    padding: 1rem;
    background: $white;

    @include breakpoint(medium down) {
      margin-bottom: 1.5rem;
    }
  }

  &__sidebar_white {
    background: $white;
    padding-top: $hr-block-padding;
    padding-bottom: $hr-block-padding;
  }

  &__sidebar_right {
    @include breakpoint(medium down) {
      @include flex-grid-column(12);
      order: 1;
      background: $white;
      padding: 0;
    }
  }

  &__sidebar_small-padding {
    @include breakpoint(medium down) {
      padding-top: 1rem;
      padding-bottom: 1rem;
    }
  }

  &__content {
    position: relative;

    &:before {
      position: absolute;
      content: '';
      top: 0;
      right: 100%;
      height: 100%;
      width: 100%;
      background: #fff;
    }

    &:not(:first-of-type) {
      margin-top: 1rem;
    }

    @include flex-grid-column(9);
    @include breakpoint(medium down) {
      @include flex-grid-column(12);
      order: 2;
    }
  }

  &__content_small {
    @include flex-grid-column(7);
    background: $white;
    padding-top: $hr-block-padding;
    padding-bottom: $hr-block-padding;

    @include breakpoint(medium down) {
      @include flex-grid-column(12);
      order: 2;
    }
  }

  &__title {
    color: $hr-dark-gray;
    font-weight: bold;
    font-size: 2.625rem;
    position: relative;
    margin-bottom: 2.5rem;
    width: 100%;

    &:after {
      content: '';
      position: absolute;
      left: 0;
      right: 0;
      top: 100%;
      margin: 10px auto;
      width: 15%;
      height: 3px;
      background: $hr-green;
    }
  }

  &__title_align-left {
    text-align: left;

    &:after {
      left: 0;
      right: inherit;
    }
  }

  &__in_green &__title {
    color: $white;
    &:after {
      background: $white;
    }
  }

  &__title_no-border {
    margin-bottom: 1rem;
    line-height: 2rem;
    &:after {
      background: none;
      width: 0;
      height: 0;
      margin: 0;
    }
  }

  &__title-span {
    width: 100%;
    display: inline-block;
    font-size: 1rem;
    color: $white;
    font-weight: 400;
  }

  &__title_comments {
    width: auto;
    &:after {
      width: 80%;
    }
    @include breakpoint(medium down) {
      width: 100%;
    }
  }

  &__description {
    color: $hr-light-gray;
    font-weight: 400;
    text-align: center;
    margin-top: 0;
  }

  &__description-title {
    width: 100%;
    display: inline-block;
    color: $hr-dark-gray;
    font-weight: 600;
    font-size: 1.125rem;
  }

  &__description-link {
    display: inline-block;
    color: $hr-green;
    margin-left: 0.2rem;
    margin-right: 0.2rem;
    line-height: 1;

    &:hover,
    &:active,
    &:focus {
      color: $hr-dark-gray;
      cursor: pointer;
    }
  }

  &__description-span {
    color: $hr-light-gray;
    margin-left: 0.2rem;
    margin-right: 0.2rem;
  }

  &__description_white {
    color: $white;
  }

  &__description_large {
    color: $hr-gray;
    font-weight: 500;
    font-size: 1.25rem;
  }

  &__diagram {
    margin-top: 2rem;
  }

  &__price-list {
    display: block;
    list-style: none;
  }

  &__price-item {
    width: 100%;
    display: inline-block;
  }

  &__price-span {
    color: $white;
    font-size: 1rem;
  }

  &__link-block {
    padding-top: 3rem;
    margin-top: 1.5rem;
    position: relative;

    &:after {
      content: '';
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      margin: 10px auto;
      width: 20%;
      height: 3px;
      background: #ececec;
    }
  }

  &__small-title {
    color: $hr-dark-gray;
    font-weight: bold;
    font-size: 1.5rem;
    position: relative;
    margin-bottom: 2.5rem;
    width: 100%;
    text-align: left;

    &:after {
      content: '';
      position: absolute;
      left: 0;
      right: inherit;
      top: 100%;
      margin: 10px auto;
      width: 15%;
      height: 3px;
      background: #ececec;
    }
  }
}

